NEW: Add app-info controller with endpoint to retrieve app's info
